fixed handler for filter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <button type="submit"> Add Bookmark </button>
     </form>
 
+    <div class= "filter-drop-down">
+      <select class="book-mark-rating-filter"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> </select>
+      <button id= "filter-toggle"> 
+        <span class="button-label">Filter your Bookmarks</span>
+      </button>
+
+    </div>
+
     <section class ="book-mark-list">
     </section>
   </div>
