--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   <div class="container">
     
     <form id="add-book-mark-form">
+        <label for="title">Title</label>
       <input type="text" name="book-mark-title" class="js-book-mark-title"  >
+      <label for="url">Url</label>
       <input type="text" name="book-mark-url" class="js-book-mark-url" >
+      <label for="description">Description</label>
       <input type="text" name="book-mark-description" class="js-book-mark-description">
+      <label for="rating">Rating</label>
       <select class="book-mark-rating"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
       <button type="submit"> Add Bookmark </button>
     </form>
 
     <div class= "filter-drop-down">
+        <label for="filter">Rating</label>
       <select class="book-mark-rating-filter"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
       <button id= "filter-toggle"> 
         <span class="button-label">Filter your Bookmarks</span>
