--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="container">
-    
+    <div class = 'col-4'>
     <form id="add-book-mark-form">
         <label for="title">Title</label>
       <input type="text" name="book-mark-title" class="js-book-mark-title"  >
@@ -24,7 +24,8 @@
       <select class="book-mark-rating"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
       <button type="submit"> Add Bookmark </button>
     </form>
-
+  </div>
+  <div class='col-4'>
     <div class= "filter-drop-down">
         <label for="filter">Rating</label>
       <select class="book-mark-rating-filter"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
@@ -38,6 +39,7 @@
   
 
     </div>
+  </div>
     <div class ="error-message">
 
 
