--- a/index.html
+++ b/index.html
@@ -3,34 +3,38 @@
 
 <head>
   <title>Bookmark List</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="float.css">
+  
+ <!-- <link rel="stylesheet" href="float.css"> -->
 </head>
 
 <body>
-
+  <header role="banner">
+  <h1 >Bookmark List</h1> 
+</header>
   <div class="container">
-    <div class = 'col-4'>
+    
     <form id="add-book-mark-form">
         <label for="title">Title</label>
-      <input type="text" name="book-mark-title" class="js-book-mark-title"  >
+      <input type="text" name="book-mark-title" class="js-book-mark-title" >
       <label for="url">Url</label>
       <input type="text" name="book-mark-url" class="js-book-mark-url" >
       <label for="description">Description</label>
       <input type="text" name="book-mark-description" class="js-book-mark-description">
       <label for="rating">Rating</label>
       <select class="book-mark-rating"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
-      <button type="submit"> Add Bookmark </button>
+      <button class= "add-button" type="submit"> Add </button>
     </form>
-  </div>
-  <div class='col-4'>
-    <div class= "filter-drop-down">
+ 
+ 
+    <section class= "filter-drop-down" role = "region">
         <label for="filter">Rating</label>
       <select class="book-mark-rating-filter"> <option value=""></option><option value="1">1</option> <option value="2">2</option> <option value="3">3</option> <option value="4">4</option> <option value="5">5</option> </select>
       <button id= "filter-toggle"> 
-        <span class="button-label">Filter your Bookmarks</span>
+        <span class="button-label">Filter</span>
       </button>
 
       <button id= "filter-clear-toggle"> 
@@ -38,15 +42,13 @@
         </button>
   
 
-    </div>
-  </div>
-    <div class ="error-message">
-
-
-
-    </div>
-    <section class ="book-mark-list">
+      </section>
+ 
+    <section class ="error-message" role = "region">
     </section>
+
+    <main class ="book-mark-list" role = "main">
+    </main>
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
